# Example

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/summer/example/: ExampleInstrumentedTest.kt
app/src/test/java/com/summer/example/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
protobuf/: build.gradle.kts
protobuf/src/androidTest/java/com/summer/example/protobuf/: ExampleInstrumentedTest.kt  ExampleLibTest.kt
protobuf/src/main/cpp/: CMakeLists.txt  protobuf.cmake  protobuf.cpp  remote_store.cpp  remote_store.h
protobuf/src/main/java/com/summer/example/protobuf/: ExampleLib.kt
protobuf/src/main/proto/: example.proto
protobuf/src/test/java/com/summer/example/protobuf/: ExampleUnitTest.kt
